# vibe-coded-ai-banking-assistant

./: .gitignore  LICENSE  PLAN.md  README.md  azure.yaml
.github/: copilot-instructions.md
.github/workflows/: azure-dev.yml  ci.yml  copilot-setup-steps.yml  validate-infra.yml
backend/: Dockerfile  pyproject.toml
backend/api/: main.py
backend/services/: account_service.py  payments_service.py  transactions_service.py
backend/tests/: test_account_service.py  test_payments_service.py  test_placeholder.py  test_transactions_service.py
docs/: architecture.md
infra/: main.bicep  main.json  parameters.json
infra/modules/: container-apps-env.bicep  container-registry.bicep  key-vault.bicep  managed-identity.bicep  monitor.bicep
scripts/: deploy-base-infra.sh  iac-validate.sh
