[project]
name = "banking-assistant-backend"
version = "0.1.0"
description = "Multi-agent banking assistant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "azure-identity>=1.17.0",
    "azure-storage-blob>=12.22.0",
    "azure-ai-documentintelligence>=1.0.0",
    "opentelemetry-sdk>=1.25.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "mcp",
    "api",
    "services",
]
